--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,13 @@
+altgraph==0.17.2
 click==7.1.2
+future==0.18.2
 numpy==1.22.3
 opencv-python==4.5.5.64
 packaging==21.3
+pefile==2022.5.30
 Pillow==9.1.1
+pyinstaller==5.1
+pyinstaller-hooks-contrib==2022.7
 pyparsing==3.0.9
 PyQt5==5.15.4
 pyqt5-plugins==5.15.4.2.2
@@ -12,5 +17,6 @@ PyQt5-stubs==5.15.2.0
 pyqt5-tools==5.15.4.3.2
 pytesseract==0.3.9
 python-dotenv==0.19.2
+pywin32-ctypes==0.2.0
 qt5-applications==5.15.2.2.2
 qt5-tools==5.15.2.1.2
