--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,5 @@
 DEBUG_MODE=0
 TESSERACT_EXECUTABLE_PATH=
+OBJECT_DETECTION_MODEL_FILE_PATH=
+OBJECT_DETECTION_CONFIG_FILE_PATH=
+OBJECT_DETECTION_CLASS_FILE_PATH=
